--- a/InstallerBaseWixSharp/InstallerBaseWixSharp.csproj
+++ b/InstallerBaseWixSharp/InstallerBaseWixSharp.csproj
@@ -76,5 +76,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Files\FileResources\" />
+    <Folder Include="ApplicationSide\" />
   </ItemGroup>
 </Project>
