--- a/InstallerBaseWixSharp/InstallerBaseWixSharp.csproj
+++ b/InstallerBaseWixSharp/InstallerBaseWixSharp.csproj
@@ -54,6 +54,11 @@
     <Compile Update="Files\Dialogs\ProgressDialog.Designer.cs">
       <DependentUpon>ProgressDialog.cs</DependentUpon>
     </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Files\Dialogs\RunProgramDialog - Copy.resx">
@@ -67,6 +72,10 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Files\Dialogs\ProgressDialog.resx">
       <DependentUpon>ProgressDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
